--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
