--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^14.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",           
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
